Shifted To Cloud Database

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
+// Cloudinary
 CLOUD_NAME=dupmdfwi7
 API_KEY=982991574727785
 API_SECRET=g8gkV5InfUlkt_zxjKbcw4THtIY
 
-CLOUDINARY_URL=cloudinary://982991574727785:g8gkV5InfUlkt_zxjKbcw4THtIY@dupmdfwi7
+// MongoDB
+USERNAME=insightsabdullah
+PASS=dX5mhrpVs6CuWNbZ
