--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ PASS=dX5mhrpVs6CuWNbZ
 SECRET_KEY=abdullah2005
 
 NODE_ENV=production
+
+MONGO_URL=mongodb+srv://insightsabdullah:dX5mhrpVs6CuWNbZ@cluster0.6rgbrne.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
